# DSM-Group-04

./: README.md
group04/: pyproject.toml
group04/org/: Snomed_CT.html  Unclear points.docx  Work plan.xlsx  output.xlsx
group04/src/group04/: Dashboard.py  __init__.py  gift_for_keno.py  graph.csv  ihCCOntology_Excerpt.csv  snowstorm.py
group04/tests/: test_group04.py
