[tool.poetry]
name = "group04"
version = "0.1.0"
description = ""
authors = ["dreher <dreher@mail.hs-ulm.de>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMaxflow = "^1.2.13"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
